Update Shape2Xml.java
new Double过期